patching uses localstorage for blobs + instance integration/connections.

--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="src/style/style.css">
     <title></title>
 </head>
-<body class="layout vertical layout-start">
+<body style="position: absolute;">
 
     <app-view></app-view>
 
