--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -125,7 +125,7 @@
             .create-button {
                 position: absolute;
                 top: 32px;
-                left: 524px;
+                right: 16px;
                 width: 64px;
                 height: 64px;
             }
@@ -216,7 +216,7 @@
                 </div>
 
                 <div class="list" style="padding-bottom:32px">
-                    <paper-material elevation="3" class="character-class">
+                    <paper-material elevation="0" class="character-class">
                         <img src="{{realm.resources}}/gui/class/{{selected.name}}.svg"
                              class="class-image">
 
