--- a/prototype/website/src/game-app/mega-loader.html
+++ b/prototype/website/src/game-app/mega-loader.html
@@ -32,9 +32,9 @@
                 height: 174px;
                 margin-left: auto;
                 margin-right: auto;
-                margin-top: 96px;
                 width: 364px;
                 padding-top: 32px;
+                padding-bottom: 32px;
                 display: block;
             }
         </style>
