--- a/prototype/website/src/game-app/patch-download.html
+++ b/prototype/website/src/game-app/patch-download.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../../bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../../bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="mega-loader.html">
 
 
 <!--
@@ -29,14 +30,6 @@
                 max-width: 825px;
                 display: block;
                 margin-top: 128px;
-            }
-
-            .spinner {
-                width: 164px;
-                height: 164px;
-                margin: auto;
-                display: block;
-                top: 128px;
             }
 
             .loading-text {
@@ -119,9 +112,19 @@
                 top: 146px
             }
 
+
+            mega-loader {
+                top: 64px;
+                position: relative;
+            }
+
+
         </style>
 
         <paper-material class="container center-box" elevation="3">
+
+            <span class="patch-name">[[patch.name]]</span>
+            <span class="patch-version">[[patch.version]]</span>
 
             <template is="dom-if" if="[[downloading]]">
                 <paper-progress class="download-progress transiting" min="0" max="[[patch.size]]"
@@ -133,8 +136,6 @@
 
                 </paper-progress>
 
-                <span class="patch-name">[[patch.name]]</span>
-                <span class="patch-version">[[patch.version]]</span>
                 <span class="patch-count">[[patch.current]]/[[patch.count]]</span>
                 <span class="patch-file">[[fileName]]</span>
                 <span class="patch-bandwidth">{{formatBitRate(patch.bandwidth)}}</span>
@@ -142,14 +143,14 @@
                 <span class="patch-transferred">{{formatBytes(patch.transferred)}}</span>
             </template>
 
-            <template is="dom-if" if="[[!downloading]]">
-                <paper-spinner-lite class="spinner thin" active></paper-spinner-lite>
+            <mega-loader class="loader" text="[[status]]" enabled="[[!downloading]]"></mega-loader>
 
-                <div class="loading-text">Checking version..</div>
-            </template>
+            <mega-loader></mega-loader>
+
         </paper-material>
 
-        <iron-ajax id="patchLoader" url="[[realm.resources]]/metadata.json" handle-as="json" on-response="_onPatchMetadata"></iron-ajax>
+        <iron-ajax id="patchLoader" url="[[realm.resources]]/metadata.json" handle-as="json"
+                   on-response="_onPatchMetadata"></iron-ajax>
 
     </template>
 </dom-module>
@@ -167,6 +168,7 @@
                 this.downloading = false;
 
                 application.onUpdate((event) => {
+                    this.status = "Checking version..";
                     this.downloading = false;
                     this.server = event.server;
                     this.realm = event.realm;
@@ -181,37 +183,44 @@
                 this.patch.transferred = 0;
                 this.patch.current = 0;
                 this.patch.downloaded = 0;
-                this.downloading = true;
 
-                // todo: up to date check + local cache.
+                    patcher.load({
+                        upToDate: () => {
+                            this.status = "Loading files..";
+                            this._download();
+                        },
+                        beginUpdate: () => {
+                            this.downloading = true;
+                            this._download();
+                        }
+                    }, this.patch, this.realm.resources);
 
-                // load patch metadata - file size etc.
-                patcher.load(() => {
-                    this._download();
-                }, this.patch, this.realm.resources);
             }
 
             _download() {
                 patcher.update({
                             started: (name, version, size, files) => {
-                                this.set("downloading", true);
                                 this.set("patch.size", size);
                                 this.set("patch.files", files);
                                 this.notifyPath("patch.size");
                             },
                             completed: (file) => {
-                                this.set("patch.downloaded", file.size);
-                                this.set("patch.transferred", this.patch.size);
-                                this.notifyPath("patch.downloaded");
-                                this.notifyPath("patch.transferred");
-                                setTimeout(() => {
-                                    application.updateComplete({
-                                        server: this.server,
-                                        realm: this.realm,
-                                        character: this.character,
-                                        patch: this.patch
-                                    });
-                                }, 1)
+                                if (file) {
+                                    this.set("patch.downloaded", file.size);
+                                    this.set("patch.transferred", this.patch.size);
+                                    this.notifyPath("patch.downloaded");
+                                    this.notifyPath("patch.transferred");
+                                }
+
+                                application.updateComplete({
+                                    server: this.server,
+                                    realm: this.realm,
+                                    character: this.character,
+                                    patch: this.patch,
+                                    status: (text) => {
+                                        this.set("status", text);
+                                    }
+                                });
                             },
                             progress: (bandwidth, transferred, downloaded, current) => {
                                 this.set("fileName", Object.keys(this.patch.files)[current]);
@@ -220,6 +229,8 @@
                                 this.set("patch.downloaded", downloaded);
                                 this.set("patch.file", this.patch.files[this.fileName]);
                                 this.set("patch.current", current + 1);
+                                this.set("totalPercent", ((transferred * 100) / this.patch.size).toFixed(0));
+                                this.set("status", "Loading files.. " + this.totalPercent + "%");
                             }
                         });
             }
@@ -234,4 +245,6 @@
 
         }
         window.customElements.define(PatchDownload.is, PatchDownload);
-    </script>
+
+
+</script>
