ws state management + faster local codecs for requests + player chat.

--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -289,7 +289,7 @@
                 else {
                     this.$["toast-creating"].open();
 
-                    new RealmServer(this.realm).create({
+                    this.server.create({
                         accepted: () => {
                             application.publish("character-create", {});
                             this.characterName = "";
@@ -301,6 +301,10 @@
                     }, this.selected.name, this.characterName);
                 }
             }
+        }
+
+        setServer(server) {
+            this.server = server;
         }
 
         hasCharacter(name) {
