--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <character-create hidden="[[list]]" class="character-create">
+            <character-create id="creator" hidden="[[list]]" class="character-create">
             </character-create>
 
         </paper-material>
@@ -134,8 +134,15 @@
                 application.onRealmSelect((realm) => {
                     this.set('realm', realm);
                     this.server = new RealmServer(this.realm);
+                    this.$.creator.setServer(this.server);
                     this.showCharacters();
                     this.realmtoken(realm);
+                });
+
+                application.onLogout(() => {
+                    if (this.server) {
+                        this.server.close();
+                    }
                 });
 
                 application.subscribe('cancel-create', () => {
@@ -213,6 +220,7 @@
             }
 
             realmlist() {
+                this.server.close();
                 application.showRealms();
             }
 
