support basic spawn events + clean up game.js into new classes.

--- a/prototype/website/src/game-app/app-toolbar.html
+++ b/prototype/website/src/game-app/app-toolbar.html
@@ -63,7 +63,7 @@
                 });
 
                 application.onLogout(() => {
-                    this.loggedin = true;
+                    this.loggedin = false;
                 });
             }
 
