--- a/prototype/website/src/game-app/ui/player-status.html
+++ b/prototype/website/src/game-app/ui/player-status.html
@@ -20,7 +20,7 @@
             }
 
             .interface-box {
-                left: -50%;
+                /*left: -50%;*/
                 display: block;
                 background-color: #000000;
                 opacity: 0.84;
