--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="src/style/style.css">
     <title></title>
 </head>
-<body style="position: absolute;" oncontextmenu="return false;">
+<body style="position: absolute;" oncontextmenu="return application.development.rightClick;">
 
     <app-view></app-view>
 
